Added Bake Club Croissant recipe page and Cinnamon Butterscotch Cookies recipe page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+    <li><a href="recipes/bdayblondies.html">BDay Blondies</a></li>
+    <li><a href="recipes/bakeclubcroissant.html">Bake Club Croissant</a></li>
+    <li><a href="recipes/cinnamonbutterscotchcookies.html">Cinnamon Butterscotch Cookies</a></li>
 
-    <a href="recipes/bdayblondies.html">BDay Blondies</a>
+
+    </ul>
 </body>
 </html>
